// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`discrete-slider-component disabled: slider not focusable and sets aria-disabled: disabled 1`] = `
<discrete-slider-component selected-index="0" string-values="[&quot;A&quot;,&quot;B&quot;]">
  <div class="slider-wrapper">
    <div class="slider" dir="ltr" role="presentation">
      <div class="slider-container">
        <div class="slider-controls" role="presentation">
          <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
          <div aria-hidden="true" class="slider-moving-track" style="width: 0%;"></div>
          <div aria-disabled="true" aria-label="Slider" aria-orientation="horizontal" aria-valuemax="1" aria-valuemin="0" aria-valuenow="0" aria-valuetext="A" class="slider-thumb-container slider-thumb-container-disabled" role="slider" tabindex="-1" style="left: 0%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
            <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
          </div>
          <div aria-hidden="true" class="slider-ticks">
            <div>
              <div class="slider-tick" style="left: 0%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 100%; top: calc(50% - 10px);"></div>
            </div>
          </div>
        </div>
        <div aria-readonly="true" class="slider-value-right" role="textbox">
          A
        </div>
      </div>
    </div>
  </div>
</discrete-slider-component>
`;

exports[`discrete-slider-component drag updates index based on position: drag-behavior 1`] = `
<discrete-slider-component selected-index="0" string-values="[&quot;A&quot;,&quot;B&quot;,&quot;C&quot;,&quot;D&quot;,&quot;E&quot;]">
  <div class="slider-wrapper">
    <div class="slider" dir="ltr" role="presentation">
      <div class="slider-container">
        <div class="slider-controls" role="presentation">
          <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
          <div aria-hidden="true" class="slider-moving-track" style="width: 100%;"></div>
          <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="4" aria-valuemin="0" aria-valuenow="4" aria-valuetext="E" class="slider-thumb-container" role="slider" tabindex="0" style="left: 100%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
            <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
          </div>
          <div aria-hidden="true" class="slider-ticks">
            <div>
              <div class="slider-tick" style="left: 0%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 25%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 50%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 75%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 100%; top: calc(50% - 10px);"></div>
            </div>
          </div>
        </div>
        <div aria-readonly="true" class="slider-value-right" role="textbox">
          E
        </div>
      </div>
    </div>
  </div>
</discrete-slider-component>
`;

exports[`discrete-slider-component hideRightTextBox hides the right value output: hide-right-textbox 1`] = `
<discrete-slider-component hide-right-text-box="" selected-index="2" string-values="[&quot;Red&quot;,&quot;Green&quot;,&quot;Blue&quot;]">
  <div class="slider-wrapper">
    <div class="slider" dir="ltr" role="presentation">
      <div class="slider-container">
        <div class="slider-controls" role="presentation">
          <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
          <div aria-hidden="true" class="slider-moving-track" style="width: 100%;"></div>
          <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="2" aria-valuemin="0" aria-valuenow="2" aria-valuetext="Blue" class="slider-thumb-container" role="slider" tabindex="0" style="left: 100%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
            <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
          </div>
          <div aria-hidden="true" class="slider-ticks">
            <div>
              <div class="slider-tick" style="left: 0%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 50%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 100%; top: calc(50% - 10px);"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</discrete-slider-component>
`;

exports[`discrete-slider-component keyboard navigation changes selectedIndex and emits events: keyboard-nav 1`] = `
<discrete-slider-component selected-index="1" string-values="[&quot;A&quot;,&quot;B&quot;,&quot;C&quot;,&quot;D&quot;]">
  <div class="slider-wrapper">
    <div class="slider" dir="ltr" role="presentation">
      <div class="slider-container">
        <div class="slider-controls" role="presentation">
          <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
          <div aria-hidden="true" class="slider-moving-track" style="width: 100%;"></div>
          <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="3" aria-valuemin="0" aria-valuenow="3" aria-valuetext="D" class="slider-thumb-container slider-thumb-container-active" role="slider" tabindex="0" style="left: 100%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
            <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
          </div>
          <div aria-hidden="true" class="slider-ticks">
            <div>
              <div class="slider-tick" style="left: 0%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 33.33333333333333%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 66.66666666666666%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 100%; top: calc(50% - 10px);"></div>
            </div>
          </div>
        </div>
        <div aria-readonly="true" class="slider-value-right" role="textbox">
          D
        </div>
      </div>
    </div>
  </div>
</discrete-slider-component>
`;

exports[`discrete-slider-component parses stringValues from JSON attribute and respects selectedIndex + a11y value text: json-values-and-selected-index 1`] = `
<discrete-slider-component selected-index="2" string-values="[&quot;Low&quot;,&quot;Med&quot;,&quot;High&quot;,&quot;Ultra&quot;]" tick-labels="">
  <div class="slider-wrapper">
    <div class="slider" dir="ltr" role="presentation">
      <label class="form-control-label" id="dslider_6d4kte50g-label">
        Quality
        <span id="dslider_6d4kte50g-value">
          High
        </span>
      </label>
      <div class="slider-container">
        <div class="slider-controls" role="presentation">
          <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
          <div aria-hidden="true" class="slider-moving-track" style="width: 67%;"></div>
          <div aria-labelledby="dslider_6d4kte50g-label" aria-orientation="horizontal" aria-valuemax="3" aria-valuemin="0" aria-valuenow="2" aria-valuetext="High" class="slider-thumb-container" role="slider" tabindex="0" style="left: 67%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
            <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
          </div>
          <div aria-hidden="true" class="slider-ticks">
            <div>
              <div class="slider-tick" style="left: 0%; top: calc(50% - 10px);"></div>
              <div class="slider-tick-label" style="left: 0%; transform: translateX(-50%);">
                Low
              </div>
            </div>
            <div>
              <div class="slider-tick" style="left: 33.33333333333333%; top: calc(50% - 10px);"></div>
              <div class="slider-tick-label" style="left: 33.33333333333333%; transform: translateX(-50%);">
                Med
              </div>
            </div>
            <div>
              <div class="slider-tick" style="left: 66.66666666666666%; top: calc(50% - 10px);"></div>
              <div class="slider-tick-label" style="left: 66.66666666666666%; transform: translateX(-50%);">
                High
              </div>
            </div>
            <div>
              <div class="slider-tick" style="left: 100%; top: calc(50% - 10px);"></div>
              <div class="slider-tick-label" style="left: 100%; transform: translateX(-50%);">
                Ultra
              </div>
            </div>
          </div>
        </div>
        <div aria-labelledby="dslider_6d4kte50g-label" aria-readonly="true" class="slider-value-right" role="textbox">
          High
        </div>
      </div>
    </div>
  </div>
</discrete-slider-component>
`;

exports[`discrete-slider-component renders with defaults (snapshot) + a11y slider element: default-render 1`] = `
<discrete-slider-component>
  <div class="slider-wrapper">
    <div class="slider" dir="ltr" role="presentation">
      <div class="slider-container">
        <div class="slider-controls" role="presentation">
          <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
          <div aria-hidden="true" class="slider-moving-track" style="width: 0%;"></div>
          <div aria-disabled="true" aria-label="Slider" aria-orientation="horizontal" aria-valuemax="0" aria-valuemin="0" aria-valuenow="0" aria-valuetext="" class="slider-thumb-container slider-thumb-container-disabled" role="slider" tabindex="-1" style="left: 0%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
            <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
          </div>
          <div aria-hidden="true" class="slider-ticks"></div>
        </div>
        <div aria-readonly="true" class="slider-value-right" role="textbox"></div>
      </div>
    </div>
  </div>
</discrete-slider-component>
`;

exports[`discrete-slider-component variant class is applied to moving track and thumb container: variant-warning 1`] = `
<discrete-slider-component selected-index="1" string-values="[&quot;X&quot;,&quot;Y&quot;,&quot;Z&quot;]">
  <div class="slider-wrapper">
    <div class="slider" dir="ltr" role="presentation">
      <div class="slider-container">
        <div class="slider-controls" role="presentation">
          <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
          <div aria-hidden="true" class="slider-moving-track warning" style="width: 50%;"></div>
          <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="2" aria-valuemin="0" aria-valuenow="1" aria-valuetext="Y" class="slider-thumb-container warning" role="slider" tabindex="0" style="left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
            <div aria-hidden="true" class="slider-thumb warning" role="presentation"></div>
          </div>
          <div aria-hidden="true" class="slider-ticks">
            <div>
              <div class="slider-tick" style="left: 0%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 50%; top: calc(50% - 10px);"></div>
            </div>
            <div>
              <div class="slider-tick" style="left: 100%; top: calc(50% - 10px);"></div>
            </div>
          </div>
        </div>
        <div aria-readonly="true" class="slider-value-right" role="textbox">
          Y
        </div>
      </div>
    </div>
  </div>
</discrete-slider-component>
`;
